# RAG-ARC

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: app_registration.py  config.py  config_test.py  module.py  module_test.py
core/: __init__.py
core/file_management/chunker/: spliter.py
core/file_management/embeddings/: base.py  huggingface.py
core/file_management/extractor/: Base_GraphExtractor.py  event_GraphExtractor.py
core/file_management/parser/: docx_parser.py  fig_recognize.py  multi_parser.py  ppt_parser.py  readme.md
core/rerank/: Reranker_Qwen3.py  __init__.py  base.py
core/retrieval/: Retriever_BM25.py  Retriever_MultiPath.py  base.py  bm25.py  dense.py  multipath.py  mutipath.py  tantivy_bm25.py  tantivy_bm25_new.py
core/utils/: Fusion.py  data_model.py
encapsulation/database/: bm25_indexer.py
encapsulation/database/graph_db/: Base_Neo4j.py  event_graphrag_neo4j.py
encapsulation/database/utils/: TokenizerManager.py
encapsulation/llm/: base.py  huggingface.py  openai.py  openai_llm.py  qwen3.py
examples/graph_extract/: promt.py  temp_extracted_batch_1.json  test_event_GraphExtractor.py
examples/test/: bm25.py  main.py  tantivy_example.py  tcl_gb_chunk.json  test.py
framework/: __init__.py  config_test.py  module_test.py  register.py  register_test.py
rag_arc/core/rerank/: __init__.py
rag_arc/utils/: Fusion.py  graph_schema.py  prompt.py
test/core/: retrieval_test.py
tests/llm/: test_embedding.py  test_openai.py  test_qwen_reranker.py
utils/: __init__.py  graph_schema.py  pydantic_schema.py  schema.py
(+18 files in other folders)
